# AvatarFactory

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODEX.md  Dockerfile  INSTALL  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-azure.txt  requirements-deploy.txt  requirements-dev.txt  requirements-minimal.txt  requirements-openai.txt  requirements.txt  setup.py  setup_venv.bat  setup_venv.ps1  setup_venv.sh  test_venv.bat  test_venv.sh  verify_install.py
.azure/: deploy.ps1  deploy.sh  parameters.json
.claude/: MCP_SERVERS_GUIDE.md  settings.json  settings.local.json
.copinative/: DESIGN.md  PRINCIPLES.md  config.yaml
.copinative/workitems/: bugs.yaml  features.yaml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: azure-deployment.instructions.md  machine-migration.instructions.md
.github/workflows/: azure-deploy.yml  ci.yml  docker-build.yml
avatarfactory/: __init__.py  cli.py  daemon_runner.py
avatarfactory/adapters/: __init__.py  base.py  bluesky.py  instagram.py  linkedin.py  (+7 more)
docker/: dev.backend.Dockerfile
docs/: AZURE_DEPLOYMENT.md  api-reference.md  architecture-analysis.md  architecture.md  checklist.md  configuration.md  getting-started.md  installation.md  llm-providers.md  quick-reference.md  quickstart.md  troubleshooting.md  upgrade-v0.2.0.md  venv-guide.md
examples/: quickstart.py
scripts/: cleanup_scheduler_duplicates.py  dev_setup.sh  install_dev.sh  nginx.conf  setup_venv.bat  setup_venv.ps1  setup_venv.sh  start_services.sh  supervisord.conf  test_venv.bat  test_venv.sh  verify_install.py
tests/: test_llm_provider.py
web/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
web-admin/: astro.config.mjs  package-lock.json  package.json
web-journal/: astro.config.mjs  package-lock.json  package.json
(+219 files in other folders)
